--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/media-query.css">
-</head>
-<body>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="estilos/style.css" />
+    <link rel="stylesheet" href="estilos/media-query.css" />
+  </head>
+  <body>
     <main>
-        <section id="login">
-            <div id="imagem">
-                <!-- Aqui vai a imagem! -->
+      <section id="login">
+        <div id="imagem">
+          <!-- Aqui vai a imagem! -->
+        </div>
+        <div id="formulario">
+          <h1>Login</h1>
+          <p>
+            Seja bem-vindo(a) novamente. Faça login para acessar sua conta e
+            poder fazer as configurações no seu ambiente.
+          </p>
+          <form action="login.php" method="post" autocomplete="on">
+            <div class="campo">
+                <i class="material-icons">person</i>
+              <input
+                type="email"
+                name="login"
+                id="ilogin"
+                placeholder="Seu email"
+                autocomplete="email"
+                required
+                maxlength="30"
+              />
+              <label for="ilogin">Login</label>
             </div>
-            <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-                    
-                </form>
+            <div class="campo">
+                <i class="material-icons">vpn_key</i>
+              <input
+                type="password"
+                name="senha"
+                id="isenha"
+                placeholder="Sua senha"
+                autocomplete="current-password"
+                required
+                maxlength="25"
+              />
+              <label for="isenha">Senha</label>
             </div>
-        </section>
+            <input type="submit" value="Entrar">
+            <button><a href="#">Esqueci a senha <i class="material-icons">mail</i></a></button>
+          </form>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
