formatação do formulario

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <label for="isenha">Senha</label>
             </div>
             <input type="submit" value="Entrar">
-            <button><a href="#">Esqueci a senha <i class="material-icons">mail</i></a></button>
+            <a href="#" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
           </form>
         </div>
       </section>
